# ChangeLog for dev-ruby/ruby-gettext
# Copyright 2000-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-gettext/ChangeLog,v 1.52 2009/04/05 18:56:30 graaff Exp $

  13 May 2009; Hans de Graaff <graaff@gentoo.org> ChangeLog:
  Version bump to get dependencies correct.

  07 May 2009; Hans de Graaff <graaff@gentoo.org> ChangeLog:
  Update dependency to locale 2.0.2 since this version of gettext requires it
  for new functionality.

  07 May 2009; Hans de Graaff <graaff@gentoo.org> ChangeLog:
  Version bump.

  05 Apr 2009; Hans de Graaff <graaff@gentoo.org>
  -ruby-gettext-1.10.0.ebuild, -ruby-gettext-1.92.0.ebuild:
  Remove old versions.

  19 Nov 2008; Raúl Porcel <armin76@gentoo.org> ruby-gettext-1.93.0.ebuild:
  ia64 stable wrt #246586

  15 Nov 2008; Tobias Scherbaum <dertobi123@gentoo.org>
  ruby-gettext-1.93.0.ebuild:
  ppc stable, bug #246586

  15 Nov 2008; Markus Meier <maekke@gentoo.org> ruby-gettext-1.93.0.ebuild:
  amd64/x86 stable, bug #246586

  13 Nov 2008; Ferris McCormick <fmccor@gentoo.org>
  ruby-gettext-1.93.0.ebuild:
  Sparc stable --- Bug #246586 --- in use 2 months now.

  13 Nov 2008; Hans de Graaff <graaff@gentoo.org>
  -ruby-gettext-1.90.0.ebuild, -ruby-gettext-1.91.0.ebuild:
  Remove old versions

  18 Sep 2008; Thomas Anderson <gentoofan23@gentoo.org>
  ruby-gettext-1.92.0.ebuild:
  stable amd64, bug 237770

  17 Sep 2008; Raúl Porcel <armin76@gentoo.org> ruby-gettext-1.92.0.ebuild:
  ia64/x86 stable wrt #237770

  15 Sep 2008; Brent Baude <ranger@gentoo.org> ruby-gettext-1.92.0.ebuild:
  stable ppc, bug 237770

  15 Sep 2008; Ferris McCormick <fmccor@gentoo.org>
  ruby-gettext-1.92.0.ebuild:
  Sparc stable --- Bug #237770 --- been around for over 6 weeks now.

*ruby-gettext-1.93.0 (15 Sep 2008)

  15 Sep 2008; Hans de Graaff <graaff@gentoo.org>
  +ruby-gettext-1.93.0.ebuild:
  Translation updates and minor bugfixes. This version is not yet compatible
  with the forthcoming Rails 2.2.
