@@ -1,6 +1,8 @@
 DIST gettext-1.93.0.gem 527360 RMD160 bdbe43faf868ef51343e7308b8af7a9363b02fa6 SHA1 dc662fd50630879178d88dd8b5ce6e46ff67514b SHA256 122a7a9f99fd11cc3ae6ad609955fa6dbddf28d4732d4a6cad41383c0c05291a
 DIST gettext-2.0.3.gem 197632 RMD160 e58302c878b021b5a178a4e13b2c491547c22764 SHA1 b102bace5d5bb139366a0f2628f5cdc16be7770c SHA256 0c73b5ca50ebcfb277ee3c9709872f2cda741217a6c07080ba2a0f813b1839e9
-EBUILD ruby-gettext-1.93.0-r1.ebuild 992 RMD160 96e9e69d583c84c8cf7c2c48a08ec46d04b040c1 SHA1 7366699e0ed09c362ede761299b7830e69618974 SHA256 3bba8e9166f54040f9c4ef8083582b85bdf588f3f6cae6433aa1c79d9f14bd2d
-EBUILD ruby-gettext-2.0.3.ebuild 1017 RMD160 29765db3b6bd902c6de33b898db58a34d8070ced SHA1 289a628aae8e014e356427aa1dc147d2e6cb0cd9 SHA256 1dcdf23bcd6c3d294a3718f46dccf281bdd81d4fc1650c43e6d061edcbde6a78
-MISC ChangeLog 7710 RMD160 02b2e2fdcfb66e8673626732c7e2f87a3609b51a SHA1 7f8f9b13aaa5aa4f10ab587d7f61dad6b20c2738 SHA256 82eec189b5b698625d204e9b82f868af85876f737ce822918bea7ba96d57ff51
+DIST gettext-2.0.4.gem 193536 RMD160 08c4b26d17d6afa5460b295c905f1960645ca973 SHA1 542b01ce10a07247137f4f809ee2046cec12078e SHA256 60bec4bc27a110b7a703a5ec5d6cc43df2da3d894b36cd87d6a8a0f27048b2c1
+EBUILD ruby-gettext-1.93.0-r1.ebuild 997 RMD160 d2745ed49acdef82fe6593b90b5381524173eb21 SHA1 010651e44c1c2c0d4f44032698c18ce6f885fe66 SHA256 691726ceb1ce5c21f7f6c94544805e492e5bd612091fa36ffbb3c67e5b0e1996
+EBUILD ruby-gettext-2.0.3.ebuild 1022 RMD160 511237c2cf0dcd18499dd34765aac3fb1d01ddcd SHA1 a0d3a75c19d6607b3a9dd606b9a59031de8a8206 SHA256 6dd5f8ba65fb33cc873d94e352d61b056e2879887a04faf6228a2e4c305afb35
+EBUILD ruby-gettext-2.0.4.ebuild 1022 RMD160 d41cd35480c1fd84e3ff28cdd083fe0df847b9b1 SHA1 515b025af2825e4866e97862f2005d910a6d12a9 SHA256 ffdcee89b873ba12a0418ebbaa367a6127ee0ca506edcef48536be902f1ed968
+MISC ChangeLog 8036 RMD160 4e18663bafdfc3bb6c31306148f975eebf9a2508 SHA1 a858f4865c344b93bc18623f9d3dffe36d21d9c3 SHA256 e17e44d26acb9b8acdb05396c720a8128dfc81e0f4a8c10219ed337296c9160d
 MISC metadata.xml 157 RMD160 5d9e2c7ecba96ffebd936d38acedf859cdea84e1 SHA1 8ce15dcc608eeb5616aeec610dc695cbe6f93e02 SHA256 11fba03a217e2d996f5cd8895493a5692ece8ddac2c1a2dfc71d0e830555121c
